________________________________________________________________________________

                          Filter::Crypto, Version 2.07
________________________________________________________________________________

Revision history for Perl extension Filter::Crypto.
_________________

v2.07 TODO

    - Made code Perl::Critic clean.
    - Simplified and corrected Makefile.PL requirements.
_________________

v2.06 30 May 2014

    - Simplified repository metadata for cleaner appearance on search.cpan.org.
_________________

v2.05 16 May 2014

    - Avoided possible test failures in t/02_function.t, t/03_script.t and
      t/04_par.t by avoiding the problem of trying to open a file with a pending
      delete.

    - Reduced memory fragmentation when running encrypted Perl scripts.  (Fixes
      [cpan #95021].  Thanks to Kevin Groeneveld <kgroeneveld@gmail.com> for the
      patch.)

    - Removed the rudimentary checks on the compiler versions in Makefile.PL
      when building these modules on Windows since it appears that using
      different compilers (and hence potentially different C RTL DLLs) is safe
      after all.  Note, however, that there is still a compatibility problem
      when building this module with Visual Studio .NET 2002/2003 (VC7) or
      earlier if your perl was built with Visual Studio 2005 (VC8) or later: see
      [perl #121448].  However, that is quite an unlikely scenario, so it is not
      worth checking for in Makefile.PL.

    - Changed all PerlLIO_*() function calls to the corresponding lowio
      functions: they should be redefined as necessary by perl's header files
      anyway, which is indeed the case in perl-5.8.1 and above, at least -- see
      the exchanges between myself and Jan Dubois on the "perl5-porters" mailing
      list, 04-05 Mar 2010, for more details on this.

    - Uploaded source code to GitHub and included repository URLs in metadata.

    - Included META.json file in addition to META.yml.
